# oci-lens

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.example.yaml  shapes.json
docs/: INSTALL_LINUX.md  INSTALL_WINDOWS.md  RUNBOOK.md  future_plan.md
scripts/: install.ps1  install.sh  run_ruff.py  setup_schedule.py  uninstall.ps1  uninstall.sh
src/analytics/: __init__.py  anomaly.py  confidence.py  cost_mapper.py  engine.py  loader.py  ratios.py  right_sizer.py  shape_catalog.py  utilization.py
src/collector/: compute.py  cost.py  oci_client.py  runner.py  storage.py
src/config/: loader.py
src/models/: schemas.py
src/notifier/: __init__.py  base.py  dispatcher.py  email_channel.py  slack_channel.py  teams_channel.py
src/orchestrator/: __init__.py  pipeline.py  state.py  steps.py
src/reporter/: __init__.py  builder.py  narrative.py  styles.py
src/utils/: date_utils.py  health.py  logger.py  redaction.py
tests/fixtures/: generate_fixture.py  scenario_mixed_raw.json
tests/test_analytics/: conftest.py  test_anomaly.py  test_engine.py  test_loader.py  test_ratios.py  test_right_sizer.py  test_shape_catalog.py  test_utilization.py
tests/test_collector/: test_cost.py  test_oci_client.py  test_storage.py
tests/test_config/: test_loader.py
tests/test_notifier/: test_dispatcher.py  test_email_channel.py  test_slack_channel.py  test_teams_channel.py  test_templates.py
tests/test_orchestrator/: test_pipeline.py  test_state.py  test_steps.py
(+41 files in other folders)
