[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "oci-cost-optimizer"
version = "1.0.0"
description = "OCI Cloud Cost Optimization — automated right-sizing recommendations and reporting"
requires-python = ">=3.9"
dependencies = [
    "oci>=2.126,<3",
    "pyyaml>=6.0,<7",
    "python-dotenv>=1.0,<2",
    "pandas>=2.0,<3",
    "structlog>=24.0,<25",
    "reportlab>=4.0,<5",
    "matplotlib>=3.7,<4",
    "squarify>=0.4,<1",
    "Pillow>=10.0,<11",
    "pypdf>=3.0,<5",
    "jinja2>=3.1,<4",
    "numpy>=1.24,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "pandera>=0.18",
]

[project.scripts]
oci-cost-optimizer = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
